--- a/Iteratia 3/carousel.html
+++ b/Iteratia 3/carousel.html
@@ -38,7 +38,7 @@
         <b-carousel
           id="carousel-1"
           v-model="slide"
-          :interval="2000"
+          :interval="4000"
           controls
           fade
           img-width="1024"
@@ -198,7 +198,9 @@
     </script>
 
     <style>
-      
+      body{
+        background-color: moccasin;
+      }
       .btn-secondary{
         background-color: #a71d31;
         border: #a71d31;
