--- a/Iteratia 3/carousel.html
+++ b/Iteratia 3/carousel.html
@@ -199,7 +199,7 @@
 
     <style>
       body{
-        background-color: moccasin;
+        background-color: #f7e7d9;
       }
       .btn-secondary{
         background-color: #a71d31;
