--- a/Iteratia 3/carousel/html_components/carousel.html
+++ b/Iteratia 3/carousel/html_components/carousel.html
@@ -84,6 +84,7 @@
     <script src="https://unpkg.com/vue@latest/dist/vue.js"></script>
     <script src="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.js"></script>
     <script type="text/javascript" src = "../scripts/carousel_script.js"></script>
-
+    <script type="text/javascript" src = "../scripts/rgba_to_hex_converter_script.js"></script>
+    
 </body>
 </html>
