--- a/Iteratia 3/carousel/index.html
+++ b/Iteratia 3/carousel/index.html
@@ -1,1 +1,3 @@
-<iframe src="html_components/carousel.html" frameborder="0" width="600"></iframe>
+<iframe src="html_components/carousel.html?user_id=value" frameborder="0" width="600">
+</iframe>
+<script type="text/javascript" src = "scripts/useful.js"></script>
