--- a/Iteratia 3/carousel/html_components/carousel.html
+++ b/Iteratia 3/carousel/html_components/carousel.html
@@ -18,23 +18,6 @@
 
   <body>
     <div id="app">
-      <b-container>
-        <form style="margin-bottom: 60px;" @submit="submitForm">
-          <div class="form-group">
-            <label for="user_id"></label>
-            <input
-              type="user_id"
-              class="form-control"
-              id="user_id"
-              placeholder="User ID"
-              v-model="search"
-            />
-          </div>
-
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-      </b-container>
-
       <b-container class="carousel-style">
         <b-carousel
           id="carousel-1"
@@ -83,8 +66,9 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es2015%2CIntersectionObserver"></script>
     <script src="https://unpkg.com/vue@latest/dist/vue.js"></script>
     <script src="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.js"></script>
+    <script type="text/javascript" src = "../scripts/useful.js"></script>
     <script type="text/javascript" src = "../scripts/carousel_script.js"></script>
-    <script type="text/javascript" src = "../scripts/rgba_to_hex_converter_script.js"></script>
+    
     
 </body>
 </html>
